--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -115,8 +115,8 @@
         <nav class="main-menu top-menu">
             <ul class="d-flex gap-3 list-unstyled mb-0">
                 <li class="active"><a href="/Home/Index">Home</a></li>
-                <li><a href="/Home/About">About Us</a></li>
-                <li><a href="/Flights/Index">Flights</a></li>
+                <li><a href="/Customer/Home/Details">About Us</a></li>
+                <li><a href="/Customer/Home/Results">Flights</a></li>
                 <li><a href="/Booking/Index">Booking</a></li>
             </ul>
         </nav>
